--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,40 @@ html{
     font-family: 'DM Sans', sans-serif;
 }
 /*-------------------------------------------------------*/
+header{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-width: 320px;
+    height: 334px;
+    text-align: center;
+}
+header img{
+    width: 150px;
+    height: 24px;
+    margin-top: 60px;
+    /*Como podemos centrar un elemento que esta dentro de un contenedor con display flex*/
+    align-self: center;
+}
+.header--title-container{
+    width: 90%;
+    min-width: 228px;
+    max-width: 900px;
+    height: 218px;
+    margin-top: 40px;
+    text-align: center;
+    align-self: center;
+}
+
+
+
+
+
+
+
+
+
+
+
