--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ header img{
     /*Como podemos centrar un elemento que esta dentro de un contenedor con display flex*/
     align-self: center;
 }
-.header--title-container{
+.header__title-container{
     width: 90%;
     min-width: 228px;
     max-width: 900px;
@@ -56,22 +56,22 @@ header img{
     text-align: center;
     align-self: center;
 }
-.header--title-container h1{
+.header__title-container h1{
     font-size: 2.4rem;
     font-weight: bold;/*Es para el grueso de la fuente*/
     line-height: 2.6rem;/*Es para el espacio entre lineas*/
     color: var(--just-white);
 }
-.header--title-container p{
+.header__title-container p{
     margin-top: 25px;
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;/*Es para el espacio entre lineas*/
     color: var(--soft-orange); 
 }
-.header--title-container .header--button{
+.header__title-container .header__button{
     position: absolute;
-    left: calc(50% - 118px);
+    left: calc(50% - 118px);/*Para centrar el boton*/
     top: 270px;
     display: block;
     margin-top: 35px;
@@ -88,10 +88,28 @@ header img{
     text-decoration: none;
     color: var(--black);
 }
-.header--button span{
+.header__button span{
     display: inline-block;
     width: 13px;
     height: 8px;
     margin-left: 10px;
     background-image: url('../assets/icons/vector-black-down.svg');
+}
+main{
+    width: 100%;
+    height: auto;/*Va cresiendo a la medida que crece el contenido*/
+    background-color: var(--off-white);
+}
+.main-exchange-container{
+    width: 100%;
+    height: auto;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+.main-exchange-container__title{
+    width: 90%;
+    min-width: 288px;/*limite minimo del width*/
+    max-width: 900px;/*limite maximo del width*/
+    margin: 0 auto;/*Para centrar*/
 }
