--- a/css/style.css
+++ b/css/style.css
@@ -113,3 +113,27 @@ main{
     max-width: 900px;/*limite maximo del width*/
     margin: 0 auto;/*Para centrar*/
 }
+.main-exchange-container__backgroundImg{
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    background-image: url('../assets/imgs/Bitcoin.svg');
+    background-size: cover;
+    background-position: center;/*Para que la imagen quede centrada*/
+    background-repeat: no-repeat;/*Garantiza que la imagen no se repita si es mas pequeña que el contenedor*/
+}
+.main-exchange-container h2{
+    margin-bottom: 30px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+.main-exchange-container p{
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    color: #757575;
+}
