--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,39 @@ main{
     line-height: 1.6rem;
     color: #757575;
 }
+.main-currency-table{
+    width: 70%;/*No ocupa toda la pantalla*/
+    min-width: 235px;/*Para asegurar que no se aga mas pequeña de 235px*/
+    max-width: 500px;/*No cresca mas de 500px*/
+    height: 360px;
+    margin: 0 auto;
+    font-family: "Inter", sans-serif;
+}
+/*Para mayor especificidad y evitar conflictos es recomendable invocar varias
+clases teniendo en cuenta la gerarquia*/
+.main-currency-table .currency-table__title{
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--bitcoin-orange);
+    text-align: left;
+}
+.currency-table__container{
+    width: 90%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 0 auto;
+}
+.currency-table__container table{
+    width: 100%;
+    height: 100%;}
+.currency-table__container td{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
