--- a/css/style.css
+++ b/css/style.css
@@ -314,3 +314,43 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
     font-weight: 300;
     color: var(--warm-black);     
 }
+/*ESTILOS DE LA SECCION BENEFICIOS*/
+.main-product-detail{
+    position: relative;/*Se utiliza para poder utilizar el position absolute en  batata-logo */
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
+}
+.product-detail__batata-logo{
+    position: absolute;/*Requiere que el contenedor padre tenga position relative*/
+    top: -10px;
+    left: calc(50% - 20px);
+    width: 40px;
+    height: 25px;
+    margin-left: 10px;
+    background-image: url('../assets/icons/batata.svg');  
+}
+.product-detail__title{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+.product-detail__title h2{
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.product-detail__title p{
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
