--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
 .product-detail__batata-logo{
     position: absolute;/*Requiere que el contenedor padre tenga position relative*/
     top: -10px;
-    left: calc(50% - 20px);
+    left: calc(50% - 20px);/*Centra la imagen*/
     width: 40px;
     height: 25px;
     margin-left: 10px;
@@ -353,4 +353,68 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
     font-weight: 500;
     line-height: 1.8rem;
     color: #808080;
+}
+.product-detail__card{
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    margin: 15px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 4px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+.product-detail__card .clock{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url('../assets/icons/clock.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product__card-title{
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+} 
+.product__card-body{
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+} 
+.product-detail__card .eye{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url('../assets/icons/eye.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-detail__card .moneda{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url('../assets/icons/dollar-sign.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.product-detail__card .check{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url('../assets/icons/check-circle.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
