--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,7 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
     background-size: cover;
     background-repeat: no-repeat;
 }
+/*SECCION DE CONOCELO HOY*/
 .bitcoin-img-container{
     width: 100%;
     min-width: 320px;
@@ -435,4 +436,114 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
     font-weight: bold;
     line-height: 2.6rem;
     color: var(--just-white)
+}
+/*SECCION DE PLANES*/
+.main-plans-container{
+    width: 100%;
+    min-width: 320px;
+    max-width: 500px; 
+    padding-bottom: 70px;
+    text-align: center;
+}
+.plans__title{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+.plans__title h2{
+    padding-top: 50px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--black);
+}
+.plans__title p{
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
+/*Creamos el deslizador horizontal*/
+.plans-container__slider{
+    display: flex;
+    height: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+.plans-container__card{
+    position: relative;
+    scroll-snap-align: center;/*Aliniar el elemento en elcento*/
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    min-height: 250px;
+    margin: 50px 10px 0;
+    padding: 0 15px;
+    background-color: var(--just-white);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+.plans-container__card .recommended{
+    position: absolute;
+    width: 120px;
+    height: 31px;
+    top: -15px;
+    left: calc(50% - 60px);
+    border-radius: 8px;
+    padding: 6px;
+    font-size: 1.2rem;
+    background-color: var(--bitcoin-orange);
+    color: var(--just-white);  
+}
+.plans-info-container .plans-card__title{
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: black;
+
+}
+.plans-card__price{
+    padding: 5px 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: black;
+}
+.plans-card__price span{
+    font-size: 1.2rem;
+    font-weight: 300;
+    vertical-align: top;
+}
+.plans-card__saving{
+    font-size: 1.2rem;
+    color: #757575;
+}
+.plans-card__ca{
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: var(--off-white);
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 4px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);   
+}
+.plans-card__ca span{
+    display: inline-block;/*Para poder ver el icono*/
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    background-image: url('../assets/icons/arrow-right.svg');
+    vertical-align: text-bottom;/*Aliniar el icon con el texto del boton*/
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
