--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ main{
 /*ESTILOS DE LA SECCION INTERCAMBIO*/
 .main-exchange-container{
     width: 100%;
+    min-width: 320px;
     height: auto;
     padding-top: 80px;
     padding-bottom: 30px;
@@ -159,6 +160,8 @@ main{
 /*Para mayor especificidad y evitar conflictos es recomendable invocar varias
 clases teniendo en cuenta la gerarquia*/
 .main-currency-table .currency-table__title{
+    max-width: 300px;
+    margin: 0 auto;
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
@@ -258,6 +261,8 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
 /*Para mayor especificidad y evitar conflictos es recomendable invocar varias
 clases teniendo en cuenta la gerarquia*/
 .main-comisiones-table .comisiones-table__title{
+    max-width: 300px;
+    margin: 0 auto;
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
@@ -451,9 +456,10 @@ este estilo a las celdas de las esquinas de la siguiente manera*/
 .main-plans-container{
     width: 100%;
     min-width: 320px;
-    max-width: 500px; 
+    max-width: 800px; 
     padding-bottom: 70px;
     text-align: center;
+    margin: 0 auto;
 }
 .plans__title{
     width: 90%;
